name:                shorty
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/mukeshm/shorty#readme
license:             BSD3
license-file:        LICENSE
author:              Mukesh M
maintainer:          mukeshgowda.m@gmail.com
copyright:           2017 Mukesh M
category:            Web
build-type:          Simple
extra-source-files:  README.md
data-files:          templates/*.html
cabal-version:       >=1.10

executable shorty
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , scotty
                     , wai-extra
                     , http-types
                     , random
                     , network-uri
                     , text
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/mukeshm/shorty
